# uwb_reconn

./: .gitignore  .gitmodules  GEMINI.md  README.md  TOPICS.md
proposed_xml/: STATIC_FASTRTPS_PROFILE_TEST.xml  test.xml
src/drone_manager/: package.xml  setup.cfg  setup.py
src/drone_manager/drone_manager/: class_particle.py  drone_manager.py  formation.py  jfi.py  mode_handler.py  motor_monitor.py  motor_publisher.py  repulsion.py  target.py  target_monitor.py
src/gazebo_uwb_sensor_plugins/: CMakeLists.txt  package.xml
src/gazebo_uwb_sensor_plugins/src/: gazebo_uwb_plugin.cpp
src/gcs/: package.xml  setup.cfg  setup.py
src/gcs/gcs/: gcs.py
src/gimbal_control/: package.xml  setup.cfg  setup.py
src/gimbal_control/gimbal_control/: gimbal_controller.py
src/mission/: package.xml  setup.py
src/mission/mission/: Agent.py  ocm_publisher.py  px4_cmd.py  start_mission.py  start_mission_circle.py  start_mission_corner.py  start_mission_hover.py  start_mission_straight.py  start_mission_uwb_cross.py  start_mission_uwb_straight.py  tag_random_move.py  uwb_reconnaissance.py
src/rosmsgs/: CMakeLists.txt  package.xml
src/rosmsgs/msg-ros1/: ESP32S2FTMRanging.msg  ESP32S2FTMRangingExtra.msg
src/rosmsgs/msg-ros2/: ESP32S2FTMRanging.msg  ESP32S2FTMRangingExtra.msg  Ranging.msg  RangingList.msg
src/rviz_visualizer/: package.xml  setup.cfg  setup.py
src/rviz_visualizer/rviz_visualizer/: rviz_visualizer.py
src/siyi_camera/: package.xml  setup.cfg  setup.py
src/siyi_camera/siyi_camera/: camera_controller.py
src/uwb_localization/: package.xml  setup.py
src/uwb_localization/uwb_localization/: kalman_localization.py  sqrrange_leastsqr_localization.py
src/uwb_msgs/: CMakeLists.txt
src/uwb_msgs/msg/: ParticleDistribution.msg  RangingDiff.msg  RangingList.msg
src/uwb_sim/: CMakeLists.txt  package.xml
src/uwb_sim/config/: drone1_bridge_config.yaml  drone2_bridge_config.yaml  drone3_bridge_config.yaml  drone4_bridge_config.yaml  fastdds_profiles.xml  static_discovery.xml  static_endpoints.xml
src/uwb_sim/confs/: anchors_1.yaml  anchors_2.yaml  anchors_3.yaml  custom.rviz  default.rviz
src/uwb_sim/launch/: 1_typhoon_gazebo_world_run.launch.py  2_typhoon_gazebo_world_run.launch.py  3_typhoon_gazebo_world_run.launch.py  4_typhoon_gazebo_world_run.launch.py  camera_control.launch.py  diff_robot_in_gazebo_world_run.launch.py  drone_manager.launch.py  drone_manager_gazebo_world_run.launch.py  gazebo_typhoon_gazebo_world_run.launch.py  robot_in_gazebo_world_run.launch.py  set_parameters.sh  typhoon_gazebo_world_run.launch.py
src/uwb_sim/worlds/: empty.world.jinja  first.world.jinja  fourth.world.jinja  second.world.jinja  third.world.jinja
src/yolo/: package.xml  setup.py
tasks/: prd-static-discovery-config.md  tasks-prd-static-discovery-config.md
(+13 files in other folders)
